tests/codegen/errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.base/reader-refinement-missing-base.mon
;; TEST-ID: tests.codegen.reader-error.reader-refinement-missing-base
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/collections-refinements
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected base type after '∈'
;; TEST-ATOM: atom.reader.error.reader.refinement.missing.base
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.refinement.missing.base
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected base type after '∈'
;; TEST-READER-PATH: reader.c:6348 parser.refinement
;; TEST-CODEGEN-PATH: diagnostic.parser.refinement
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6348 Expected base type after '∈'
;; TEST-USES-ATOM: atom.reader.error.reader.refinement.missing.base
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.refinement
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.base
;; TEST-MENU-PATH: codegen/errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.base
;; TEST-ATOM-LEAF: atom.reader.error.reader.refinement.missing.base
;; TEST-CLI-TARGET: codegen errors reader collections-refinements

(module Main)
(type Positive { x ∈ | (> x 0) })
